Fix some layout issues with the uploader

--- a/app/assets/stylesheets/layout/tabs/tab_set/tabs.css
+++ b/app/assets/stylesheets/layout/tabs/tab_set/tabs.css
@@ -4,7 +4,8 @@
   overflow-y: hidden;
   background: var(--tabbar-background);
   padding: 15px 15px 0 15px;
-  margin: -20px -20px 20px -20px;
+  margin: calc(0 - var(--content-block-padding));
+  margin-bottom: 0;
 }
 .page.properties.tab-set > .tab-set.tabs {
   margin: 0 0 20px 0;
